TEZ-1904. Fix findbugs warnings in tez-runtime-library module. (sseth)